# tiles-processor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  CLAUDE.md  Dockerfile  Dockerfile.script  Makefile  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  radar_to_tiles.py  settings.json
.github/workflows/: deploy.yml  test.yml
docs/imgs/: queue_system.mmd
migrations/: README.md
migrations/metrics/: env.py
migrations/metrics/versions/: 0001_baseline.py
migrations/progress/: env.py
migrations/progress/versions/: 0001_baseline.py
scripts/: .fuse_hidden00001ae600000033  benchmark_minio.py  explore_radar.py  generate-compose.sh  init_minio.sh  keepalive.sh  radar_to_tiles.py  seaweedfs_start.sh  setup_minio.sh
src/: config.py  exceptions.py  factories.py  health_server.py  healthcheck.py  logging_config.py  main.py  scheduler.py
src/clients/: message_queue_client.py  metrics_repository.py  minio_upload_client.py  progress_tracker.py  rabbitmq_client.py  s3_client.py  seaweedfs_filer_uploader.py  sqlite_utils.py  tile_upload_backend.py
src/constants/: constants.py
src/dashboard/: __init__.py  queue_monitor.py  server.py
src/dashboard/templates/: index.html
src/data_sources/: __init__.py  base.py  ecmwf.py  ecmwf_period_source.py  ecmwf_producer_source.py  glm19.py  glm_folder.py  glm_folder_repository.py  goes19.py  goes19_abi.py  goes19_base.py  goes19_glm.py  goes19_repository.py  radar.py  radar_repository.py  registry.py  s3_repository_utils.py  wrf.py  wrf_repository.py
src/db/: __init__.py  migrate.py
src/jobs/: heartbeat_job.py  process_band_13_job.py  process_band_9_job.py
src/metrics_api/: __init__.py  queue_monitor.py  schemas.py  server.py
src/models/: __init__.py  band_config.py  ecmwf_config.py  ecmwf_palettes.py  glm_folder_config.py  input_source_config.py  job_metrics.py  radar_config.py  radar_palettes.py  stage.py  work_unit.py  wrf_config.py
src/processors/: __init__.py  band13_processor.py  band2_processor.py  band9_processor.py  base_processor.py  ecmwf_grib_downloader.py  ecmwf_mslp_processor.py  ecmwf_period_processor.py  ecmwf_precipitation_processor.py  ecmwf_processor.py  ecmwf_tp_processor.py  glm_fed_processor.py  goes_processor.py  inline_processor.py  radar_processor.py  registry.py  wrf_processor.py
src/producer/: __init__.py  image_discovery_producer.py  queue_router.py
src/services/: compute_brightness_temperatures.py  concurrent_runner.py  contouring.py  generate_geotiff_files.py  generate_tiles.py  glm_aggregation.py  job_descriptor.py  processing_steps.py  retention_policy_service.py  setup_goes_georreferencing.py
src/worker/: __init__.py  ecmwf_grib_downloader.py  exit_codes.py  inline_processor.py  job_metrics_context.py  subprocess_processor.py  work_handler.py  worker.py
src/worker/stage_handlers/: __init__.py  base_handler.py  brightness_handler.py  cleanup_handler.py  download_handler.py  georeference_handler.py  geotiff_handler.py  (+2 more)
tests/: conftest.py  test_concurrency_control.py  test_config.py  test_contouring.py  test_dashboard_server.py  test_ecmwf_grib_downloader.py  test_ecmwf_mslp_processor.py  test_ecmwf_producer_source.py  test_factories.py  test_generate_geotiff_files.py  test_generate_tiles.py  test_glm_aggregation.py  test_glm_fed_processor.py  test_glm_folder_config.py  test_glm_folder_data_source.py  test_glm_folder_palettes.py  test_glm_folder_repository.py  test_goes19_glm.py  test_goes19_repository.py  test_health_server.py  test_healthcheck.py  test_image_discovery_producer.py  test_integration.py  test_job_descriptor.py  test_job_metrics_context.py  test_logging.py  test_metrics_api_server.py  test_metrics_repository.py  test_migrations.py  test_pipeline_batching.py  test_process_handler.py  test_processing_steps.py  test_progress_tracker.py  test_queue_monitor.py  test_queue_router.py  test_rabbitmq_consume.py  test_radar_data_source.py  test_radar_inta.py  test_radar_processor_paths.py  test_radar_repository.py  (+12 more)
