[project]
name = "tiles-processor"
version = "0.1.0"
description = "GOES-19 Tiles Processor"
authors = [
    { name = "Agustín Altamirano", email = " aaltamirano@fi.uba.ar" },
    { name = "Gabriel Diem", email = "wdiem@fi.uba.ar" },
    { name = "Máximo Gismondi", email = "magismondi@fi.uba.ar" },
    { name = "Matías Valeriani", email = "mvaleriani@fi.uba.ar" },
]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.poetry]
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
numpy = "^1.26.0"
xarray = "^2025.12.0"
rioxarray = "^0.15.0"
aioboto3 = "^15.5.0"
h5netcdf = "^1.7.3"
pyproj = "^3.7.2"
scipy = "^1.16.3"
apscheduler = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
