[project]
name = "tiles-processor"
version = "0.1.0"
description = "Tiles Processor"
authors = [
    { name = "Agustín Altamirano", email = " aaltamirano@fi.uba.ar" },
    { name = "Gabriel Diem", email = "wdiem@fi.uba.ar" },
    { name = "Máximo Gismondi", email = "magismondi@fi.uba.ar" },
    { name = "Matías Valeriani", email = "mvaleriani@fi.uba.ar" },
]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.poetry]
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
numpy = "^2.4.0"
xarray = "^2025.9.0"
rioxarray = "^0.21.0"
aioboto3 = "^15.5.0"
h5netcdf = "^1.8.1"
pyproj = "^3.7.2"
scipy = "^1.17.0"
pika = "^1.3.2"
apscheduler = "^3.11.2"
pytz = "^2025.2"
h5py = "^3.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pylint = "^4.0.4"
mypy = "^1.19.1"
pyrefly = "^0.51.1"
requests = "^2.32.5"
pre-commit = "^4.5.1"

[tool.pylint.main]
init-hook = "import sys; sys.path.insert(0, 'src')"

[tool.pylint.design]
max-attributes = 30

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
