[project]
name = "tiles-processor"
version = "0.1.0"
description = "Tiles Processor"
authors = [
    { name = "Agustín Altamirano", email = " aaltamirano@fi.uba.ar" },
    { name = "Gabriel Diem", email = "wdiem@fi.uba.ar" },
    { name = "Máximo Gismondi", email = "magismondi@fi.uba.ar" },
    { name = "Matías Valeriani", email = "mvaleriani@fi.uba.ar" },
]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.poetry]
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
numpy = "^2.4.0"
xarray = "^2025.9.0"
rioxarray = "^0.21.0"
aioboto3 = "^15.5.0"
h5netcdf = "^1.8.1"
pyproj = "^3.7.2"
scipy = "^1.17.0"
pika = "^1.3.2"
apscheduler = "^3.11.2"
pytz = "^2025.2"
h5py = "^3.15.1"
arm-pyart = "^1.19.5"
rasterio = "^1.4.3"
matplotlib = "^3.10.0"
requests = "^2.32.5"
types-requests = "^2.32.4.20260107"
ecmwf-opendata = "^0.3.12"
cfgrib = "^0.9.15"
shapely = "^2.0"
contourpy = "^1.3"
glmtools = { git = "https://github.com/deeplycloudy/glmtools.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pylint = "^4.0.4"
mypy = "^1.19.1"
pyrefly = "^0.51.1"
pre-commit = "^4.5.1"
types-aioboto3 = "^15.5.0"
types-pika-ts = "^1.3.0.20250914"
types-pytz = "^2026.1.1.20260304"

[tool.pylint.main]
init-hook = "import sys; sys.path.insert(0, 'src')"

[tool.pylint.design]
max-attributes = 30

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "pyart.*",
    "apscheduler.*",
    "pika",
    "pika.*",
    "ecmwf",
    "ecmwf.*",
    "pandas",
    "pytz",
    "requests",
    "glmtools",
    "glmtools.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
